--- a/workspaces/web/css/chat.css
+++ b/workspaces/web/css/chat.css
@@ -8,79 +8,86 @@ and open the template in the editor.
     Author     : starr_000
 */
 
-body{
+/*body{
     height:400px;
     position: fixed;
     bottom: 0;
+}*/
+
+.chat{
+    position: fixed;
+    right: 0; 
 }
-.col-md-2, .col-md-10{
+
+.chat .col-md-2, .col-md-10{
     padding:0;
 }
-.panel{
+.chat .panel{
     margin-bottom: 0px;
 }
-.chat-window{
+.chat .chat-window{
     bottom:0;
     position:fixed;
-    float:right;
+    right: 0;
     margin-left:10px;
 }
-.chat-window > div > .panel{
+
+.chat .chat-window > div > .panel{
     border-radius: 5px 5px 0 0;
 }
-.icon_minim{
+.chat .icon_minim{
     padding:2px 10px;
 }
-.msg_container_base{
+.chat .msg_container_base{
   background: #e5e5e5;
   margin: 0;
   padding: 0 10px 10px;
   max-height:300px;
   overflow-x:hidden;
 }
-.top-bar {
+.chat .top-bar {
   background: #666;
   color: white;
   padding: 10px;
   position: relative;
   overflow: hidden;
 }
-.msg_receive{
+.chat .msg_receive{
     padding-left:0;
     margin-left:0;
 }
-.msg_sent{
+.chat .msg_sent{
     padding-bottom:20px !important;
     margin-right:0;
 }
-.messages {
+.chat .messages {
   background: white;
   padding: 10px;
   border-radius: 2px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   max-width:100%;
 }
-.messages > p {
+.chat .messages > p {
     font-size: 13px;
     margin: 0 0 0.2rem 0;
   }
-.messages > time {
+.chat .messages > time {
     font-size: 11px;
     color: #ccc;
 }
-.msg_container {
+.chat .msg_container {
     padding: 10px;
     overflow: hidden;
     display: flex;
 }
-img {
+.chat img {
     display: block;
     width: 100%;
 }
-.avatar {
+.chat .avatar {
     position: relative;
 }
-.base_receive > .avatar:after {
+.chat .base_receive > .avatar:after {
     content: "";
     position: absolute;
     top: 0;
@@ -92,11 +99,11 @@ img {
     border-bottom-color: rgba(0, 0, 0, 0);
 }
 
-.base_sent {
+.chat .base_sent {
   justify-content: flex-end;
   align-items: flex-end;
 }
-.base_sent > .avatar:after {
+.chat .base_sent > .avatar:after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -109,31 +116,31 @@ img {
     box-shadow: 1px 1px 2px rgba(black, 0.2); // not quite perfect but close
 }
 
-.msg_sent > time{
+.chat .msg_sent > time{
     float: right;
 }
 
 
 
-.msg_container_base::-webkit-scrollbar-track
+.chat .msg_container_base::-webkit-scrollbar-track
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color: #F5F5F5;
 }
 
-.msg_container_base::-webkit-scrollbar
+.chat .msg_container_base::-webkit-scrollbar
 {
     width: 12px;
     background-color: #F5F5F5;
 }
 
-.msg_container_base::-webkit-scrollbar-thumb
+.chat .msg_container_base::-webkit-scrollbar-thumb
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
 
-.btn-group.dropup{
+.chat .btn-group.dropup{
     position:fixed;
     left:0px;
     bottom:0;
