--- a/workspaces/web/css/custom.css
+++ b/workspaces/web/css/custom.css
@@ -32,15 +32,20 @@ body {
     padding: 0;
     margin: 0;
     overflow: hidden;
+    overflow-y: scroll;
     border: none;
 }
 
-
+.workspaceWindow{
+   margin: 0 10px;
+    
+}
 
 .wrapper {	
 	margin-top: 80px;
   margin-bottom: 80px;
 }
+
 
 .form-signin {
   max-width: 380px;
@@ -98,6 +103,7 @@ body {
   position: fixed;
   left: -95px;
   top: 39px;
+  z-index: 9999;
 }
 
 .icon-bar:hover{
@@ -147,4 +153,31 @@ body {
 
 .group-icon{
   background: url("../images/icon-07.png");
+}
+
+/************************************************
+ * Group Styling
+ ************************************************/
+.group-members{
+    max-height: 160px;
+    overflow-y: scroll;
+}
+
+.group-members hr{
+    padding: 0;
+    margin: 10px 15px;
+}
+
+.member{
+    overflow: hidden;
+}
+
+.panel-show-groups .panel-heading{
+    width: 100%;
+    margin-left: 0;
+}
+
+.add-group-btn{
+    background: none;
+    color: #337ab7;
 }
